--- a/frontend/src/components/pages/landing/style.css
+++ b/frontend/src/components/pages/landing/style.css
@@ -3,14 +3,15 @@
 }
 
 .landing {
-    height: 95vh;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* color: var(--fg-color); */
     color: var(--heading-color);
+}
+
+* {
+    /* outline: 1px solid red; */
 }
 
 .landing-hero {
@@ -18,7 +19,7 @@
     justify-content: center;
     align-items: center;
 
-    height: 95vh;
+    height: 100vh;
     font-family: var(--font-monoton);
     letter-spacing: 10px;
 }
@@ -35,7 +36,6 @@
     align-items: center;
     position: absolute;
     z-index: 5;
-    /* filter: drop-shadow(5px 5px red); */
 }
 
 .hero-txt-primary {
@@ -60,6 +60,13 @@
     font-family: var(--font-archivo);
     letter-spacing: 10px;
     font-size: 4rem;
+}
+
+video {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    position: absolute;
 }
 
 /* Extra small devices (phones, 600px and down) */
